Slash commands for moderation (#306)
* WIP slash commands for moderation

* Run commands on own thread

Implement list for blacklist

* Clear black list

* Adding to the blacklist

* Remove blacklisted word

* Finish blacklist command

* Adding and listing vc autoroles

* Add vcautorole command to slash support

* Lint

* Move dehoist command to slash support

* Convert slowmode command

* Convert warn command

* Lint code

* Convert warnings command

* convert announce command

* Implemeht slash method in all new mod commands